fix - fix some css issues (norefs)

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,11 +22,26 @@
     min-height: 293px;
 }
 
-.header__logo,
-.about__logo {
+.header__logo{
     width: 148px;
     height: 105px;
 }
+
+.about__logo {
+    width: 141.55px;
+    height: 112.55px;
+}
+
+.header__logo > img {
+    width: 148px;
+    height: 105px;
+}
+
+.about__logo > img {
+    width: 141.55px;
+    height: 112.55px;
+}
+
 
 .header__menu {
     margin-left: 50px;
@@ -37,10 +52,17 @@
     flex-direction: row;
     gap: 30px;
     list-style: circle ;
+    /* for pixel perfect */
+    margin-bottom: 5px;
+    margin-left: 1px;
 }
 
 .header__links-list-item {
     text-decoration: underline;
+}
+
+.header__links-list-item:last-child {
+    margin-left: 4px;
 }
 
 .header__links-list-item--no-bullit {
@@ -50,10 +72,10 @@
 
 .header__address {
     justify-self: end;
-    margin-right: 50px;
+    margin-right: 80px;
 }
 
-.header__address, .footer__address , .footer__links-list-item {
+.header__address, .footer__address , .footer__links-list-item, .header__links-list-item {
     text-align: left;
     font-family: "Raleway";
     font-size: 18px;
@@ -70,24 +92,12 @@
     background-size: cover;
     background-blend-mode: multiply;
     color: white;
-
-    display: flex;
-    flex-direction: column;
-    gap: 100px;
+    position: relative;
     margin-bottom: 180px;
-    
 }
 
 .cover__title {
-    /* margin-top: 165px; */
-    margin-top: 165px;
-    margin-left: 50px;
-    margin-right: 50px;
-    height: 385px;
-
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+    /* empty */
 }
 
 .cover__title-text {
@@ -100,18 +110,29 @@
 }
 
 .cover__title-left-text-aligned {
-    align-self: flex-start;
+    position: absolute;
+    left: 50px;
+    top: 165px;
 }
 
 .cover__title-center-text-aligned {
-    align-self: center;
+    position: absolute;
+    left: 380.5px;
+    top: 300px;
 }
 
 .cover__title-right-text-aligned {
-    align-self: flex-end;
+    position: absolute;
+    top: 435px;
+    left: 663px;
 }
 
 .cover__description {
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    right: 0;
+
     display: flex;
     flex-direction: row;
     height: 51px;
@@ -129,7 +150,7 @@
     text-transform: uppercase;
     line-height: 28px;
     align-self: center;
-    word-spacing: 25px;
+    word-spacing: 18px;
 }
 
 .cover__description-bet-button {
@@ -244,7 +265,6 @@
     text-underline-offset: 5px;
 }
 
-
 .about {
     height: 595px;
     display: flex;
@@ -264,11 +284,12 @@
     margin: 35px 72px 0px 47px;
     
 }
+
 .about__background > img {
-    width: 142px;
-    height: 113px;
-    display: block;
+    width: 148px;
+    height: 115px;
     margin: auto;
+    display: block;
 }
 
 .about__content {
@@ -311,6 +332,10 @@
 .footer__links-list-item {
     text-decoration: underline;
     text-align: center;
+}
+
+.footer__links-list-item:not(:last-child){
+    margin-bottom: -3px;
 }
 
 .footer__links-list-item:first-child {
