--- a/styles/style.css
+++ b/styles/style.css
@@ -177,7 +177,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     list-style: none;
-    height: 596px;
+    /* height: 596px; */
     color: white;
     gap: 25px;
     margin: 0 24px;
@@ -187,6 +187,7 @@
     display: flex;
     width: 334px;
     flex: 0 0 334px;
+    min-height: 596px;
 }
 
 .lots__card-item > a {
