--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,12 @@
 /* место для вашего кода */
 
+
+:root {
+    --overlay-color: rgba(0, 0, 0, 0.6);
+}
+
 .title-text {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 40px;
     letter-spacing: 0em;
@@ -9,7 +14,7 @@
 }
 
 .common-text {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 400;
     letter-spacing: 0em;
@@ -19,7 +24,9 @@
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-    min-height: 293px;
+    /* min-height: 293px; */
+    margin-top: 92px;
+    margin-bottom: 96px;
 }
 
 .header__logo {
@@ -64,22 +71,19 @@
     margin-right: 80px;
 }
 
-.header__address, .footer__address , .footer__links-list-item, .header__links-list-item {
+.address, .footer__links-list-item, .header__links-list-item {
     text-align: left;
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 400;
     font-style: normal;
     line-height: 24.3px;
     text-underline-offset: 4px;
-    
 }
 
 .cover {
-    height: 757px;
-    background: url("../images/cover.jpg") rgba(0,0,0,.6);
-    background-size: cover;
-    background-blend-mode: multiply;
+    min-height: 757px;
+    background: url("../images/cover.jpg") var(--overlay-color);
     color: white;
     position: relative;
     margin-bottom: 180px;
@@ -90,7 +94,7 @@
 }
 
 .cover__title-text {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-size: 100px;
     font-weight: 700;
     letter-spacing: 0.3em;
@@ -124,7 +128,6 @@
 
     display: flex;
     flex-direction: row;
-    height: 51px;
     margin-left: 50px;
     margin-right: 50px;
     margin-bottom: 50px;
@@ -132,7 +135,7 @@
 }
 
 .cover__description-text {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-size: 22px;
     font-weight: 400;
     letter-spacing: 0;
@@ -144,12 +147,12 @@
 
 .cover__description-bet-button {
     padding: 0;
-    border: 1px solid white;
+    border: 1px solid currentColor;
     font: inherit;
     color: inherit;
     background-color: transparent;
     
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-size: 22px;
     font-weight: 400;
     text-transform: uppercase;
@@ -162,9 +165,8 @@
 }
 
 .lots {
-    min-height: 723px;
-    margin-bottom: 120px;
-
+    margin-bottom: 123px;
+    /* min-height: 723px; */
 }
 
 .lots__title {
@@ -197,23 +199,20 @@
     text-decoration: none;
 }
 
-.lots__cards-item-bg-1 {
-    background: url(../images/card-lot-01.jpg) rgba(0, 0, 0, .5);
-    background-size: cover;
-    background-position: 50% 50%;
-    background-blend-mode: multiply;
-    
+/* reviewer vult */
+.lots__cards-item-bg-fancy-book {
+    background: url(../images/card-lot-01.jpg) var(--overlay-color);
 }
 
-.lots__cards-item-bg-2 {
-    background: url(../images/card-lot-02.jpg) rgba(0, 0, 0, .6);
-    background-size: cover;
-    background-position: 50% 50%;
-    background-blend-mode: multiply;
+.lots__cards-item-bg-borinng-book {
+    background: url(../images/card-lot-02.jpg) var(--overlay-color);
 }
 
-.lots__cards-item-bg-3 {
-    background: url(../images/card-lot-03.jpg) rgba(0, 0, 0, .6);
+.lots__cards-item-bg-silly-book {
+    background: url(../images/card-lot-03.jpg) var(--overlay-color);
+}
+
+.overlay-commons {
     background-size: cover;
     background-position: 50% 50%;
     background-blend-mode: multiply;
@@ -244,18 +243,16 @@
 }
 
 .lots__view-more-link {
-    margin-top: 32px;
+    margin-top: -2px;
     margin-left: 64px;
     font-size: 20px;
     line-height: 100%;
-}
-
-.lots__view-more-link > a {
+    display: block;
     text-underline-offset: 5px;
 }
 
 .about {
-    height: 595px;
+    /* height: 595px; */
     display: flex;
     flex-direction: row;
     margin: 0 24px 180px 24px;
@@ -296,7 +293,7 @@
 }
 
 .about__content-title {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-weight: 700;
     font-size: 40px;
     letter-spacing: 0em;
@@ -304,7 +301,7 @@
 }
 
 .about__content-text {
-    font-family: "Raleway";
+    font-family: "Raleway", sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
@@ -319,7 +316,7 @@
 }
 
 .footer {
-    height: 180px;
+    /* height: 180px; */
     display: flex;
     justify-content: space-between;
 }
@@ -329,7 +326,6 @@
 }
 
 .footer__links-list-item {
-    text-decoration: underline;
     text-align: center;
 }
 
@@ -337,9 +333,13 @@
     margin-bottom: -3px;
 }
 
-.footer__links-list-item:first-child {
+.active-link {
     text-decoration: none;
 }
+
+/* .footer__links-list-item:first-child {
+    text-decoration: none;
+} */
 
 .footer__social_list {
     display: flex;
