--- a/styles/style.css
+++ b/styles/style.css
@@ -85,12 +85,13 @@
     min-height: 757px;
     background: url("../images/cover.jpg") var(--overlay-color);
     color: white;
-    position: relative;
     margin-bottom: 180px;
 }
 
 .cover__title {
-    /* empty */
+    display: grid;
+    grid-template-rows: repeat(3, auto);
+    padding-top: 165px;
 }
 
 .cover__title-text {
@@ -103,35 +104,25 @@
 }
 
 .cover__title-left-text-aligned {
-    position: absolute;
-    left: 50px;
-    top: 165px;
+    justify-self: start;
+    padding-left: 50px;
 }
 
 .cover__title-center-text-aligned {
-    position: absolute;
-    left: 380.5px;
-    top: 300px;
+    justify-self: center;
+    padding: 20px 0 0 30px;
 }
 
 .cover__title-right-text-aligned {
-    position: absolute;
-    top: 435px;
-    left: 663px;
+    justify-self: end;
+    padding: 20px 20px 0 0;
 }
 
 .cover__description {
-    position: absolute;
-    bottom: 0px;
-    left: 0;
-    right: 0;
-
     display: flex;
     flex-direction: row;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-bottom: 50px;
     justify-content: space-between;
+    margin: 106px 50px 50px 50px;
 }
 
 .cover__description-text {
@@ -319,6 +310,8 @@
     /* height: 180px; */
     display: flex;
     justify-content: space-between;
+    
+    margin-bottom: 82px;
 }
 
 .footer__address {
@@ -326,20 +319,17 @@
 }
 
 .footer__links-list-item {
-    text-align: center;
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-.footer__links-list-item:not(:last-child) {
-    margin-bottom: -3px;
+    /* пиксель перфект T_T */
+    max-height: 21px;
 }
 
 .active-link {
     text-decoration: none;
 }
-
-/* .footer__links-list-item:first-child {
-    text-decoration: none;
-} */
 
 .footer__social_list {
     display: flex;
